--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -12,6 +12,52 @@
     tools:context = ".Dashboard">
 
 
+    <Button
+        android:id="@+id/dashboard_button_ontology"
+        android:layout_width="150dp"
+        android:layout_height="105dp"
+        android:layout_below="@+id/dashboard_Title"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@drawable/button_redbackground_blackstroke"
+        android:drawableTop="@drawable/heart"
+        android:text="@string/dashboard_button_ontology"
+        android:textColor="@color/colorWhite"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toStartOf="@+id/dashboard_button_calendar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dashboard_button_subject" />
+
+    <Button
+        android:id="@+id/dashboard_button_subject"
+        android:layout_width="150dp"
+        android:layout_height="105dp"
+        android:layout_below="@+id/dashboard_Title"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@drawable/button_redbackground_blackstroke"
+        android:drawableTop="@drawable/heart"
+        android:text="@string/dashboard_button_subjects"
+        android:textColor="@color/colorWhite"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toStartOf="@+id/dashboard_button_goals"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dashboard_Title" />
+
     <ImageView
         android:id="@+id/dashboard_logo"
         android:layout_width="129dp"
@@ -41,54 +87,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button_profile"
-        android:layout_width="315dp"
-        android:layout_height="105dp"
-        android:layout_below="@+id/dashboard_Title"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginStart="45dp"
-        android:layout_marginLeft="45dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="45dp"
-        android:layout_marginRight="45dp"
-        android:background="@drawable/button_redbackground_blackstroke"
-        android:drawableStart="@drawable/heart"
-        android:drawableLeft="@drawable/heart"
-        android:text="@string/dashboard_button_profile"
-        android:textColor="@color/colorWhite"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dashboard_Title" />
-
-    <Button
-        android:id="@+id/button_subjects"
-        android:layout_width="315dp"
-        android:layout_height="105dp"
-        android:layout_below="@+id/dashboard_Title"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginStart="45dp"
-        android:layout_marginLeft="45dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="45dp"
-        android:layout_marginRight="45dp"
-        android:background="@drawable/button_redbackground_blackstroke"
-        android:drawableLeft="@drawable/icon_subjects"
-        android:text="@string/dashboard_button_subjects"
-        android:textColor="@color/colorWhite"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_profile" />
-
-    <Button
-        android:id="@+id/button_statistics"
+        android:id="@+id/dashboard_button_calendar"
         android:layout_width="150dp"
         android:layout_height="105dp"
         android:layout_below="@+id/dashboard_Title"
@@ -96,22 +95,68 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginStart="45dp"
-        android:layout_marginLeft="45dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
+        android:background="@drawable/button_redbackground_blackstroke"
+        android:drawableTop="@drawable/heart"
+        android:text="@string/dashboard_button_calendar"
+        android:textColor="@color/colorWhite"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/dashboard_button_ontology"
+        app:layout_constraintTop_toBottomOf="@+id/dashboard_button_goals" />
+
+    <Button
+        android:id="@+id/dashboard_button_goals"
+        android:layout_width="150dp"
+        android:layout_height="105dp"
+        android:layout_below="@+id/dashboard_Title"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
+        android:background="@drawable/button_redbackground_blackstroke"
+        android:drawableTop="@drawable/heart"
+        android:text="@string/dashboard_button_goals"
+        android:textColor="@color/colorWhite"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/dashboard_button_subject"
+        app:layout_constraintTop_toBottomOf="@+id/dashboard_Title" />
+
+    <Button
+        android:id="@+id/dashboard_button_statistics"
+        android:layout_width="150dp"
+        android:layout_height="105dp"
+        android:layout_below="@+id/dashboard_Title"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:background="@drawable/button_redbackground_blackstroke"
         android:drawableTop="@drawable/icon_statistics"
         android:text="@string/dashboard_button_statistics"
         android:textColor="@color/colorWhite"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/button_notifications"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toStartOf="@+id/dashboard_button_notifications"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_subjects" />
+        app:layout_constraintTop_toBottomOf="@+id/dashboard_button_ontology" />
 
     <Button
-        android:id="@+id/button_notifications"
+        android:id="@+id/dashboard_button_notifications"
         android:layout_width="150dp"
         android:layout_height="105dp"
         android:layout_below="@+id/dashboard_Title"
@@ -119,18 +164,18 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginStart="15dp"
-        android:layout_marginLeft="15dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="45dp"
-        android:layout_marginRight="45dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
         android:background="@drawable/button_redbackground_blackstroke"
         android:drawableTop="@drawable/notifications"
         android:text="@string/dashboard_button_notifications"
         android:textColor="@color/colorWhite"
-        android:textSize="18sp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button_statistics"
-        app:layout_constraintTop_toBottomOf="@+id/button_subjects" />
+        app:layout_constraintStart_toEndOf="@+id/dashboard_button_statistics"
+        app:layout_constraintTop_toBottomOf="@+id/dashboard_button_calendar" />
 
 </android.support.constraint.ConstraintLayout>
