--- a/app/src/main/res/layout/activity_goals.xml
+++ b/app/src/main/res/layout/activity_goals.xml
@@ -1,65 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android = "http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools = "http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_content"
     android:layout_width="match_parent"
-    android:layout_height = "match_parent"
-    android:paddingLeft= "@dimen/activity_horizontal_margin"
-    android:paddingRight = "@dimen/activity_horizontal_margin"
-    android:paddingTop = "@dimen/activity_vertical_margin"
-    android:paddingBottom = "@dimen/activity_vertical_margin"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:context=".Goals"
     android:background="@drawable/background_nobar"
-    android:id="@+id/goals_main_layout"
-    tools:context = ".Goals">
+    >
 
-    <ScrollView
-        android:id="@+id/goals_scrollView2"
-        android:layout_width="406dp"
-        android:layout_height="724dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/goals_appbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.constraint.ConstraintLayout
+
+
+        <android.support.design.widget.TabLayout
+            android:id="@+id/goals_tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent">
+            app:tabBackground="@drawable/red_rectangle_whiteborder" />
 
-            <ListView
-                android:id="@+id/goals_main_list"
-                android:layout_width="321dp"
-                android:layout_height="407dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginRight="20dp"
-                android:divider="@null"
-                android:dividerHeight="20dp"
-                android:scrollbars="none"
-                android:smoothScrollbar="true"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </android.support.constraint.ConstraintLayout>
-    </ScrollView>
+    </android.support.design.widget.AppBarLayout>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/float_addGoals"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="33dp"
-        android:layout_marginRight="33dp"
-        android:layout_marginBottom="17dp"
-        android:clickable="true"
-        android:focusable="auto"
-        app:backgroundTint="@color/colorPrimary"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/ic_input_add" />
+    <android.support.v4.view.ViewPager
+        android:id="@+id/goals_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
 
-</android.support.constraint.ConstraintLayout>
+
+
+</android.support.design.widget.CoordinatorLayout>
