--- a/app/src/main/res/layout/activity_assignments.xml
+++ b/app/src/main/res/layout/activity_assignments.xml
@@ -35,7 +35,7 @@
                 android:layout_height="407dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginLeft="20dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="104dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginRight="20dp"
                 android:divider="@null"
@@ -43,6 +43,7 @@
                 android:scrollbars="none"
                 android:smoothScrollbar="true"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.511"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </android.support.constraint.ConstraintLayout>
